fixed alignemtn for phone services

--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ body {
 }
 
 .header {
-	font-size: 60px;
+	font-size: 9vw;
 	display: block;
 	text-align: center;
 	margin: auto;
@@ -15,9 +15,9 @@ body {
 li {
 	display: inline-block;
 	/*text-align: center;*/
-	padding: 0 1.5em 0 1.5em;
+	padding: 0 1em 0 1em;
 	color: #1c1c1c;
-	font-size: 2.2vw;
+	font-size: 3.2vw;
 	font-family: 'Dosis', sans-serif;
 }
 
